--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@
 ## Intermediate documents:
 *.dvi
 *-converted-to.*
+Zusammenfassung_MOBPRO_15FS.pdf
 # these rules might exclude image files for figures etc.
 # *.ps
 # *.eps
